tests/specs/node/unstable_detect_cjs/return_stmt/fail.out
error: Uncaught SyntaxError: Illegal return statement
  return;
  ^
    at <anonymous> (file:///[WILDLINE])
